--- a/src/ProcSharp/ProcSharp.csproj
+++ b/src/ProcSharp/ProcSharp.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>ProcSharpCore</RootNamespace>
+    <Version>0.0.5</Version>
+    <PackageProjectUrl>https://github.com/simoneddeland/proc-sharp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/simoneddeland/proc-sharp</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Description>ProcSharp is an implementation of the Processing framework in C#.</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
