--- a/src/ProcSharp/ProcSharp.csproj
+++ b/src/ProcSharp/ProcSharp.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>ProcSharpCore</RootNamespace>
-    <Version>0.0.8</Version>
+    <Version>1.2</Version>
     <PackageProjectUrl>https://github.com/simoneddeland/proc-sharp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/simoneddeland/proc-sharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
